# FlexiRope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
flexirope/: __init__.py  constants.py  factory.py  plugins.py  rope.py  wire.py
tests/: test_flexirope.py  test_flexirope_full.py
