[project]
name = "flexirope"
version = "0.1.0"
description = "Flexible middleware-based method tools"
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = []
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Указываем uv, где искать исходники
[tool.hatch.build.targets.wheel]
packages = ["flexirope"]

# Добавляем pytest в группу разработки
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]