[project]
name = "flexirope"
version = "0.1.2"
description = "Flexible middleware-based method tools"
authors = [{name = "SnayperTihCreator"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flexirope"]

[tool.hatch.build.targets.sdist]
exclude = ["/.gitignore", "/.github", "/tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]